# log_analysis

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitmodules  API_SPEC.json  API_SPEC_UPDATED.json  ARCHITECTURE.md  BATCH_PROCESSING.md  BENCHMARKS.md  BENCHMARK_ALL_DATASETS.md  CONFIGURATION.md  Cargo.toml  Dockerfile  FRONTEND_API_GUIDE.md  INGEST_SERVICE_API.md  JSD_ANALYSIS_GUIDE.md  Kraftfile  LLM_CONFIG.md  LLM_TEMPLATE_GUIDE.md  LOG_EXAMPLES.md  LOG_TEMPLATE_GUIDE.md  Makefile  OLLAMA_QUICKSTART.md  OPENTELEMETRY_INTEGRATION.md  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_JOURNEY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_BENCHMARK.md  README.md  RUN_BENCHMARKS.md  SCALING_TO_MILLIONS.md  SERVICE_API.md  clickhouse_schema.sql  llm-config.example.json  test_ac
.github/: copilot-instructions.md
Launch_benchmark_parallel-459e54c26ae449ed_2025-10-27_15.38.22_EFCCEC5C.trace/: form.template  open.creq
benchmark_results/: cached_benchmark_20251021_040537.csv  full_20251023_230538.csv  full_20251112_013727.csv  full_20251112_013901.csv  full_20251112_014041.csv  full_20251112_015824.csv  full_20251112_015858.csv  full_20251112_015918.csv  full_20251112_020115.csv  full_20251112_020614.csv  loghub_benchmark_20251021_035300.csv  parallel_20251021_160334.csv  parallel_20251023_225546.csv  parallel_20251023_230309.csv  parallel_20251029_162510.csv  parallel_20251112_013609.csv  parallel_benchmark_20251021_035835.csv  parallel_benchmark_20251021_040115.csv  parallel_benchmark_20251021_040339.csv  parallel_benchmark_20251021_040420.csv  parallel_benchmark_20251021_040440.csv  parallel_benchmark_20251021_040504.csv  parallel_benchmark_20251021_040834.csv  parallel_benchmark_20251021_043945.csv  parallel_benchmark_20251021_155852.csv  parallel_benchmark_20251027_153828.csv  quick_20251021_160202.csv  quick_20251021_160610.csv  quick_20251023_225546.csv  quick_20251023_230309.csv  quick_20251112_013609.csv  quick_20251112_015834.csv  ultra_20251112_023239.csv  ultra_20251112_023358.csv  ultra_20251112_023718.csv  ultra_20251112_032155.csv  ultra_20251112_032257.csv  ultra_20251112_032449.csv
docs/: EC2_BENCHMARKING.md  EXTREME_PERFORMANCE.md  MULTI_CORE_SCALING.md  PERFORMANCE_OPTIMIZATIONS.md  README.md
examples/: benchmark_dfa_rebuild.rs  build_all_dfas.rs  build_templates_from_csv.rs  generate_all_templates.rs  generate_comprehensive_templates.rs  generate_ground_truth_templates.rs  generate_semantic_templates.rs  generate_templates_ollama.rs  llm_templates_from_csv.rs  multi_llm_test.rs  profile_cache.rs  profile_cache_mega.rs  regenerate_templates.rs
experiments/: README.md  bloom_dfa.rs  bloom_dfa_benchmark.rs  demo_aho_corasick.rs
src/: benchmark_runner.rs  buffered_writer.rs  clickhouse_client.rs  config.rs  dataset_splitter.rs  fragment_classifier.rs  histogram.rs  implementations.rs  jsd.rs  lib.rs  llm_config.rs  llm_service.rs  log_format_detector.rs  log_matcher.rs  log_matcher_fast.rs  log_matcher_zero_copy.rs  log_stream_client.rs  loghub_loader.rs  main.rs  matcher_config.rs  metadata_service.rs  pattern_learner.rs  semantic_template_generator.rs  smart_template_generator.rs  token_classifier.rs  traits.rs
tests/: BENCHMARK_README.md  PERFORMANCE_COMPARISON.md  aho_corasick_benchmark.rs  aho_corasick_matcher.rs  batch_benchmark.rs  benchmark.rs  benchmark_all_datasets.rs  benchmark_optimized.rs  benchmark_parallel.rs  (+23 more)
(+121 files in other folders)
