[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
radix_trie = "0.2"
regex = "1.10"
anyhow = "1.0"

# ClickHouse client
clickhouse = "0.12"

# Rig for LLM communication
rig-core = "0.3"

# gRPC client
tonic = "0.12"
prost = "0.13"
